--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
         <section class="home-presentacion">
             <span>VAPERSMADRID</span>
             <div class="deslizar">
-                <span>🡇</span>
+                <img src="img/flecha-abajo.png" alt="flecha apuntando hacia abajo">
                 <h2>Desliza hacia abajo para ver más</h2>
-                <span>🡇</span>
+                <img src="img/flecha-abajo.png" alt="flecha apuntando hacia abajo">
             </div>
         </section>
         <section class="home-bang">
