--- a/index.html
+++ b/index.html
@@ -5,22 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VapersMadrid</title>
     <link rel="stylesheet" href="css/style.css">
-    <script src="js/script.js"></script>
+    <script src="js/script.js" defer></script>
 </head>
 <body>
     <video autoplay muted loop class="video-fondo"><source src="video/fondo.mp4" type="video/mp4"></video>
     <header>
-        <nav>
-            <ul>
-                <li class="index"><a href="index.html">VAPERSMADRID</a></li>
-            </ul>
-            <!-- Para móviles -->
-             <a class="logo-nav" href="">VAPERSMADRID</a>
+        <nav class="headernav">
+            <a class="logo-nav" href="index.html">VAPERSMADRID</a>
         </nav>
     </header>
     <main>
-        <h1 class="home-presentacion-h1">Bienvenido/a a la web de</h1>
         <section class="home-presentacion">
+            <h1 class="home-presentacion-h1">Bienvenido/a a la web de</h1>
             <span>VAPERSMADRID</span>
             <div class="deslizar">
                 <img src="img/flecha-abajo.png" alt="flecha apuntando hacia abajo">
@@ -134,7 +130,7 @@
                 <div class="ventana-fondo">
                     <img src="img/bang/bang4.jpg" alt="bang1">
                     <div class="descripcion-bang">
-                        <h2>Bang Watermelon IceStrawberry Watermelon & Kiwi Passion Fruit Guava</h2>
+                        <h2>Bang Watermelon Ice Strawberry Watermelon & Kiwi Passion Fruit Guava</h2>
                         <p>Vaper dual (2 en 1) mitad sabor fresa y sandía (28ML) y mitad sabor a kiwi maracuyá guayaba (28ML). De 32.000 caladas. ⚠️Evita el contacto de cualquier liquido y cualquiera caida, se puede dañar⚠️</p>
                         <p class="precio">Precio: 13€. <span class="precio-s">⚠️SPAM EN IG -2€ DE DESCUENTO⚠️</span></p>
                         <p>Quedan: <span class="cant">5</span></p>
@@ -406,6 +402,9 @@
                 <hr>
             </div>
             <div class="proximamente">
+                <h2>PRÓXIMAMENTE</h2>
+                <h2>PRÓXIMAMENTE</h2>
+                <h2>PRÓXIMAMENTE</h2>
                 <h2>PRÓXIMAMENTE</h2>
             </div>
             <div class="productos-waspe">
