Actualización: Agregar Vopk

--- a/index.html
+++ b/index.html
@@ -37,27 +37,27 @@
                 <button class="product-bang" data-ventana="1">
                     <img src="img/bang/bang1.jpg" alt="bang watermelon ice / strawberry and mango">
                     <span>Bang Waternelon Ice & Strawberry Mango</span>
-                    <span>13€</span>
+                    <span>14€</span>
                 </button>
                 <button class="product-bang" data-ventana="2">
                     <img src="img/bang/bang2.jpg" alt="bang watermelon / ice bluberry mint">
                     <span>Bang Watermelon Ice & Blueberry Mint</span>
-                    <span>13€</span>
+                    <span>14€</span>
                 </button>
                 <button class="product-bang" data-ventana="3">
                     <img src="img/bang/bang3.jpg" alt="bang redbull / watermelon bubble candy">
                     <span>Bang Redbull & Watermelon Bubble Candy</span>
-                    <span>13€</span>
+                    <span>14€</span>
                 </button>
                 <button class="product-bang" data-ventana="4">
                     <img src="img/bang/bang4.jpg" alt="bang strawberry watermelon & kiwi passion fruit guava">
                     <span>Bang Strawberry Watermelon & Kiwi Passion Fruit Guava</span>
-                    <span>13€</span>
+                    <span>14€</span>
                 </button>
                 <button class="product-bang" data-ventana="5">
                     <img src="img/bang/bang5.png" alt="bang blueberry ice / black dragon ice">
                     <span>Bang Blueberry Ice & Black Dragon Ice</span>
-                    <span>13€</span>
+                    <span>14€</span>
                 </button>
                 <button class="product-bang" data-ventana="6">
                     <img src="img/bang/bang6.jpg" alt="bang redbull / bluberry watermelon">
@@ -67,22 +67,22 @@
                 <button class="product-bang" data-ventana="7">
                     <img src="img/bang/bang7.jpg" alt="bang blueberryice / strawberry banana">
                     <span>Bang Blueberry Ice & Strawberry Banana</span>
-                    <span>13€</span>
+                    <span>14€</span>
                 </button>
                 <button class="product-bang" data-ventana="8">
                     <img src="img/bang/bang8.png" alt="bang blueberryice / strawberry banana">
                     <span>Bang Strawberry Kiwi & Sour Apple Raspberry</span>
-                    <span>13€</span>
+                    <span>14€</span>
                 </button>
                 <button class="product-bang" data-ventana="9">
                     <img src="img/bang/bang9.png" alt="bang blueberryice / strawberry banana">
                     <span>Bang Strawberry Kiwi & Peach Ice</span>
-                    <span>13€</span>
+                    <span>14€</span>
                 </button>
                 <button class="product-bang" data-ventana="10">
                     <img src="img/bang/bang10.jpg" alt="bang blueberryice / strawberry banana">
                     <span>Bang Blueberry Ice & Black Dragon Ice</span>
-                    <span>13€</span>
+                    <span>14€</span>
                 </button>
             </div>
             <!-- Ventanas descriptivas -->
@@ -93,7 +93,7 @@
                     <div class="descripcion-bang">
                         <h2>Bang Watermelon Ice & Strawberry And Mango</h2>
                         <p>Vaper dual (2 en 1) mitad sabor sandía (28ML) y mitad sabor a fresa y mango (28ML). De 32.000 caladas. ⚠️Evita el contacto de cualquier liquido y cualquiera caida, se puede dañar⚠️</p>
-                        <p class="precio">Precio: 13€. <span class="precio-s">⚠️SPAM EN IG -2€ DE DESCUENTO⚠️</span></p>
+                        <p class="precio">Precio: 14€. <span class="precio-s">⚠️SPAM EN IG -2€ DE DESCUENTO⚠️</span></p>
                         <p>Quedan: <span class="cant">5</span></p>
                     </div>
                     <a data-tel="34640836396" class="comprar-link">COMPRAR Y CONTACTAR</a>
@@ -106,7 +106,7 @@
                     <div class="descripcion-bang">
                         <h2>Bang Watermelon Ice & Blueberry Mint</h2>
                         <p>Vaper dual (2 en 1) mitad sabor sandía (28ML) y mitad sabor a menta de arándano (28ML). De 32.000 caladas. ⚠️Evita el contacto de cualquier liquido y cualquiera caida, se puede dañar⚠️</p>
-                        <p class="precio">Precio: 13€. <span class="precio-s">⚠️SPAM EN IG -2€ DE DESCUENTO⚠️</span></p>
+                        <p class="precio">Precio: 14€. <span class="precio-s">⚠️SPAM EN IG -2€ DE DESCUENTO⚠️</span></p>
                         <p>Quedan: <span class="cant">5</span></p>
                     </div>
                     <a data-tel="34640836396" class="comprar-link">COMPRAR Y CONTACTAR</a>
@@ -119,7 +119,7 @@
                     <div class="descripcion-bang">
                         <h2>Bang Redbull Ice & Watermelon Bubble Candy</h2>
                         <p>Vaper dual (2 en 1) mitad sabor redbull (28ML) y mitad sabor a sandia con caramelo de burbujas (28ML). De 32.000 caladas. ⚠️Evita el contacto de cualquier liquido y cualquiera caida, se puede dañar⚠️</p>
-                        <p class="precio">Precio: 13€. <span class="precio-s">⚠️SPAM EN IG -2€ DE DESCUENTO⚠️</span></p>
+                        <p class="precio">Precio: 14€. <span class="precio-s">⚠️SPAM EN IG -2€ DE DESCUENTO⚠️</span></p>
                         <p>Quedan: <span class="cant">5</span></p>
                     </div>
                     <a data-tel="34640836396" class="comprar-link">COMPRAR Y CONTACTAR</a>
@@ -132,7 +132,7 @@
                     <div class="descripcion-bang">
                         <h2>Bang Watermelon Ice Strawberry Watermelon & Kiwi Passion Fruit Guava</h2>
                         <p>Vaper dual (2 en 1) mitad sabor fresa y sandía (28ML) y mitad sabor a kiwi maracuyá guayaba (28ML). De 32.000 caladas. ⚠️Evita el contacto de cualquier liquido y cualquiera caida, se puede dañar⚠️</p>
-                        <p class="precio">Precio: 13€. <span class="precio-s">⚠️SPAM EN IG -2€ DE DESCUENTO⚠️</span></p>
+                        <p class="precio">Precio: 14€. <span class="precio-s">⚠️SPAM EN IG -2€ DE DESCUENTO⚠️</span></p>
                         <p>Quedan: <span class="cant">5</span></p>
                     </div>
                     <a data-tel="34640836396" class="comprar-link">COMPRAR Y CONTACTAR</a>
@@ -145,7 +145,7 @@
                     <div class="descripcion-bang">
                         <h2>Bang Blueberry Ice & Black Dragon Ice</h2>
                         <p>Vaper dual (2 en 1) mitad sabor arándanos (28ML) y mitad sabor a dragón negro (28ML). De 32.000 caladas. ⚠️Evita el contacto de cualquier liquido y cualquiera caida, se puede dañar⚠️</p>
-                        <p class="precio">Precio: 13€. <span class="precio-s">⚠️SPAM EN IG -2€ DE DESCUENTO⚠️</span></p>
+                        <p class="precio">Precio: 14€. <span class="precio-s">⚠️SPAM EN IG -2€ DE DESCUENTO⚠️</span></p>
                         <p>Quedan: <span class="cant">5</span></p>
                     </div>
                     <a data-tel="34640836396" class="comprar-link">COMPRAR Y CONTACTAR</a>
@@ -158,7 +158,7 @@
                     <div class="descripcion-bang">
                         <h2>Bang Redbull & Blueberry Watermelon</h2>
                         <p>Vaper dual (2 en 1) mitad sabor redbull (28ML) y mitad sabor a arándanos con sandía (28ML). De 32.000 caladas. ⚠️Evita el contacto de cualquier liquido y cualquiera caida, se puede dañar⚠️</p>
-                        <p class="precio">Precio: 13€. <span class="precio-s">⚠️SPAM EN IG -2€ DE DESCUENTO⚠️</span></p>
+                        <p class="precio">Precio: 14€. <span class="precio-s">⚠️SPAM EN IG -2€ DE DESCUENTO⚠️</span></p>
                         <p>Quedan: <span class="cant">5</span></p>
                     </div>
                     <a data-tel="34640836396" class="comprar-link">COMPRAR Y CONTACTAR</a>
@@ -171,7 +171,7 @@
                     <div class="descripcion-bang">
                         <h2>Bang Blueberry Ice & Strawberry Banana</h2>
                         <p>Vaper dual (2 en 1) mitad sabor arándanos(28ML) y mitad sabor a fresa y plátano (28ML). De 32.000 caladas. ⚠️Evita el contacto de cualquier liquido y cualquiera caida, se puede dañar⚠️</p>
-                        <p class="precio">Precio: 13€. <span class="precio-s">⚠️SPAM EN IG -2€ DE DESCUENTO⚠️</span></p>
+                        <p class="precio">Precio: 14€. <span class="precio-s">⚠️SPAM EN IG -2€ DE DESCUENTO⚠️</span></p>
                         <p>Quedan: <span class="cant">5</span></p>
                     </div>
                     <a data-tel="34640836396" class="comprar-link">COMPRAR Y CONTACTAR</a>
@@ -184,7 +184,7 @@
                     <div class="descripcion-bang">
                         <h2>Bang Strawberry y Sour Apple Raspberry</h2>
                         <p>Vaper dual (2 en 1) mitad sabor fresa(28ML) y mitad sabor a manzana con frambuesa (28ML). De 32.000 caladas. ⚠️Evita el contacto de cualquier liquido y cualquiera caida, se puede dañar⚠️</p>
-                        <p class="precio">Precio: 13€. <span class="precio-s">⚠️SPAM EN IG -2€ DE DESCUENTO⚠️</span></p>
+                        <p class="precio">Precio: 14€. <span class="precio-s">⚠️SPAM EN IG -2€ DE DESCUENTO⚠️</span></p>
                         <p>Quedan: <span class="cant">5</span></p>
                     </div>
                     <a data-tel="34640836396" class="comprar-link">COMPRAR Y CONTACTAR</a>
@@ -197,7 +197,7 @@
                     <div class="descripcion-bang">
                         <h2>Bang Strawberry Kiwi & Peach Ice</h2>
                         <p>Vaper dual (2 en 1) mitad sabor fresa  y kiwi(28ML) y mitad sabor a melocotón (28ML). De 32.000 caladas. ⚠️Evita el contacto de cualquier liquido y cualquiera caida, se puede dañar⚠️</p>
-                        <p class="precio">Precio: 13€. <span class="precio-s">⚠️SPAM EN IG -2€ DE DESCUENTO⚠️</span></p>
+                        <p class="precio">Precio: 14€. <span class="precio-s">⚠️SPAM EN IG -2€ DE DESCUENTO⚠️</span></p>
                         <p>Quedan: <span class="cant">5</span></p>
                     </div>
                     <a data-tel="34640836396" class="comprar-link">COMPRAR Y CONTACTAR</a>
@@ -210,10 +210,95 @@
                     <div class="descripcion-bang">
                         <h2>Bang Blueberry Ice & Black Dragon Ice</h2>
                         <p>Vaper dual (2 en 1) mitad sabor arándanos(28ML) y mitad sabor a dragón negro (28ML). De 32.000 caladas. ⚠️Evita el contacto de cualquier liquido y cualquiera caida, se puede dañar⚠️</p>
-                        <p class="precio">Precio: 13€. <span class="precio-s">⚠️SPAM EN IG -2€ DE DESCUENTO⚠️</span></p>
+                        <p class="precio">Precio: 14€. <span class="precio-s">⚠️SPAM EN IG -2€ DE DESCUENTO⚠️</span></p>
                         <p>Quedan: <span class="cant">5</span></p>
                     </div>
                     <a data-tel="34640836396" class="comprar-link">COMPRAR Y CONTACTAR</a>
+                </div>
+            </div>
+        </section>
+        <section class="home-vopk">
+            <div class="vopk">
+                <div class="vopk-titulo">
+                    <p>VAPER VOPK</p>
+                    <p class="promos">⚠️PROMO: HACES SPAM EN IG -2€ DE DESCUENTO⚠️</p>
+                    <p>80K PUFFS</p>
+                </div>
+                <hr>
+            </div>
+            <div class="productos-vopk">
+                <button class="product-vopk" data-ventana-2="1">
+                    <img src="img/vopk/vopk1.png" alt="vopk1">
+                    <span>Vopk Redbull Ice / Passion Fruit Kiwi Lime / Sour Apple Raspberry / Strawberry Watermelon Bubblegum</span>
+                    <span>18€</span>
+                </button>
+                <button class="product-vopk" data-ventana-2="2">
+                    <img src="img/vopk/vopk2.png" alt="vopk1">
+                    <span>Vopk Strawberry Watermelon / Cranberry Grapple / Mango Ice / Strawberry Raspberry Candy</span>
+                    <span>18€</span>
+                </button>
+                <button class="product-vopk" data-ventana-2="3">
+                    <img src="img/vopk/vopk3.png" alt="vopk1">
+                    <span>Vopk Blueberry Raspberry / Fuji Ice / Mixed berry / Bluberry Cocconut Candy</span>
+                    <span>18€</span>
+                </button>
+                <button class="product-vopk" data-ventana-2="4">
+                    <img src="img/vopk/vopk4.png" alt="vopk1">
+                    <span>Vopk Watermelon Ice / Triple Melon Ice / Blue Razz Ice / Strawberry Ice Cream</span>
+                    <span>18€</span>
+                </button>
+            </div>
+            <!-- Ventanas descriptivas 2 (temporalmente vas arriba) -->
+            <div class="ventana-2" data-ventana-2="1">
+                <button class="cerrar-ventana">〤</button>
+                <div class="ventana-fondo-2">
+                    <img src="img/vopk/vopk1.png" alt="razzbar">
+                    <div class="descripcion-vopk">
+                        <h2>Vopk Redbull Ice / Passion Fruit Kiwi Lime / Sour Apple Raspberry / Strawberry Watermelon Bubblegum</h2>
+                        <p>Vaper cuádruple sabor redbull, maracuyá kiwi lima, manzana y frambuesa, fresa sandía chicle. de 80.000 caladas. ⚠️Evita el contacto de cualquier liquido y cualquiera caida, se puede dañar⚠️</p>
+                        <p class="precio">Precio: 18€. <span class="precio-s">⚠️SPAM EN IG -2€ DE DESCUENTO⚠️</span></p>
+                        <p>Quedan: <span class="cant">5</span></p>
+                    </div>
+                    <a data-tel="34640836396" class="comprar-link-1">COMPRAR Y CONTACTAR</a>
+                </div>
+            </div>
+            <div class="ventana-2" data-ventana-2="2">
+                <button class="cerrar-ventana">〤</button>
+                <div class="ventana-fondo-2">
+                    <img src="img/vopk/vopk2.png" alt="razzbar">
+                    <div class="descripcion-vopk">
+                        <h2>Vopk Strawberry Watermelon / Cranberry Grapple / Mango Ice / Strawberry Raspberry Candy</h2>
+                        <p>Vaper cuádruple sabor sandía y fresa, arándano y uva, mango, caramelo de frambuesa y fresa. de 80.000 caladas. ⚠️Evita el contacto de cualquier liquido y cualquiera caida, se puede dañar⚠️</p>
+                        <p class="precio">Precio: 18€. <span class="precio-s">⚠️SPAM EN IG -2€ DE DESCUENTO⚠️</span></p>
+                        <p>Quedan: <span class="cant">5</span></p>
+                    </div>
+                    <a data-tel="34640836396" class="comprar-link-1">COMPRAR Y CONTACTAR</a>
+                </div>
+            </div>
+            <div class="ventana-2" data-ventana-2="3">
+                <button class="cerrar-ventana">〤</button>
+                <div class="ventana-fondo-2">
+                    <img src="img/vopk/vopk3.png" alt="razzbar">
+                    <div class="descripcion-vopk">
+                        <h2>Vopk Blueberry Raspberry / Fuji Ice / Mixed berry / Bluberry Cocconut Candy</h2>
+                        <p>Vaper cuádruple sabor arándano y frambuesa, fuji, frutos rojos mixtos, y cramelo de arándano y coco. de 80.000 caladas. ⚠️Evita el contacto de cualquier liquido y cualquiera caida, se puede dañar⚠️</p>
+                        <p class="precio">Precio: 18€. <span class="precio-s">⚠️SPAM EN IG -2€ DE DESCUENTO⚠️</span></p>
+                        <p>Quedan: <span class="cant">5</span></p>
+                    </div>
+                    <a data-tel="34640836396" class="comprar-link-1">COMPRAR Y CONTACTAR</a>
+                </div>
+            </div>
+            <div class="ventana-2" data-ventana-2="4">
+                <button class="cerrar-ventana">〤</button>
+                <div class="ventana-fondo-2">
+                    <img src="img/vopk/vopk4.png" alt="razzbar">
+                    <div class="descripcion-vopk">
+                        <h2>Vopk Watermelon Ice / Triple Melon Ice / Blue Razz Ice / Strawberry Ice Cream</h2>
+                        <p>Vaper cuádruple sabor sandía, triple melón, frambuesa azul y fresa. de 80.000 caladas. ⚠️Evita el contacto de cualquier liquido y cualquiera caida, se puede dañar⚠️</p>
+                        <p class="precio">Precio: 18€. <span class="precio-s">⚠️SPAM EN IG -2€ DE DESCUENTO⚠️</span></p>
+                        <p>Quedan: <span class="cant">5</span></p>
+                    </div>
+                    <a data-tel="34640836396" class="comprar-link-1">COMPRAR Y CONTACTAR</a>
                 </div>
             </div>
         </section>
@@ -265,7 +350,7 @@
                 <button class="product-razzbar" data-ventana-1="8">
                     <img src="img/razzbar/razzbar8.jpg" alt="blackberry ice">
                     <span>Razzbar Strawberry Kiwi</span>
-                    <span>17€</span>
+                    <span>15€</span>
                 </button>
                 <button class="product-razzbar" data-ventana-1="9">
                     <img src="img/razzbar/razzbar9.png" alt="blackberry ice">
