Actualización: Responsive Tablets

--- a/index.html
+++ b/index.html
@@ -302,6 +302,9 @@
                 </div>
             </div>
         </section>
+        <div class="agotado">
+            <p>AGOTADO</p>
+        </div>
         <section class="home-razzbar">
             <div class="razzbar">
                 <div class="razzbar-titulo">
