Actualización: HTML, CSS y JS

--- a/index.html
+++ b/index.html
@@ -574,7 +574,7 @@
                     <p>Informa del error mandando este correo:</p>
                 </div>
                 <div class="problema-correo">
-                    <span>vapersmadrid.informa@gmail.com</span>
+                    <a href="mailto:vapersmadrid.informa@gmail.com">Enviar un correo</a>
                 </div>
             </div>
         </div>
