Actualización: HTML CSS

--- a/index.html
+++ b/index.html
@@ -302,10 +302,8 @@
                 </div>
             </div>
         </section>
-        <div class="agotado">
-            <p>AGOTADO</p>
-        </div>
         <section class="home-razzbar">
+            
             <div class="razzbar">
                 <div class="razzbar-titulo">
                     <p>VAPER RAZZBAR</p>
@@ -313,6 +311,11 @@
                     <p>30K PUFFS</p>
                 </div>
                 <hr>
+            </div>
+            <div class="agotado">
+                <p>AGOTADO</p>
+                <p>AGOTADO</p>
+                <p>AGOTADO</p>
             </div>
             <div class="productos-razzbar">
                 <button class="product-razzbar" data-ventana-1="1">
@@ -494,6 +497,7 @@
                 <h2>PRÓXIMAMENTE</h2>
                 <h2>PRÓXIMAMENTE</h2>
                 <h2>PRÓXIMAMENTE</h2>
+                <h2>PRÓXIMAMENTE</h2>
             </div>
             <div class="productos-waspe">
                 <div class="product-waspe">
@@ -571,10 +575,10 @@
             <div class="problema">
                 <div class="problema-titulo">
                     <h2>Ha pasado algo?</h2>
-                    <p>Informa del error mandando este correo:</p>
+                    <p>Informa del error pulsando este botón:</p>
                 </div>
                 <div class="problema-correo">
-                    <a href="mailto:vapersmadrid.informa@gmail.com">Enviar un correo</a>
+                    <a href="mailto:vapersmadrid.suport@gmail.com">Enviar un correo</a>
                 </div>
             </div>
         </div>
