--- a/index.html
+++ b/index.html
@@ -6,6 +6,44 @@
     <title>VapersMadrid</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="js/script.js" defer></script>
+    <script type="module">
+        // Firebase modular
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/12.3.0/firebase-app.js";
+        import { getAnalytics } from "https://www.gstatic.com/firebasejs/12.3.0/firebase-analytics.js";
+        import { getFirestore, collection, addDoc } from "https://www.gstatic.com/firebasejs/12.3.0/firebase-firestore.js";
+
+        const firebaseConfig = {
+            apiKey: "AIzaSyCm2ksqMJaW1UY8ye2MwtD-_XOr3RnGNPE",
+            authDomain: "vapersmadrid-identificador.firebaseapp.com",
+            projectId: "vapersmadrid-identificador",
+            storageBucket: "vapersmadrid-identificador.firebasestorage.app",
+            messagingSenderId: "652374550144",
+            appId: "1:652374550144:web:762613c15e9caf93b16865",
+            measurementId: "G-NS63W7MDKN"
+        };
+
+            // Inicializar Firebase
+        const app = initializeApp(firebaseConfig);
+        const analytics = getAnalytics(app);
+        const db = getFirestore(app);
+
+        // Guardar info del dispositivo
+        document.addEventListener("DOMContentLoaded", async () => {
+            const userAgent = navigator.userAgent;
+            const platform = navigator.platform;
+
+            try {
+            await addDoc(collection(db, "visitas"), {
+                fecha: new Date(),
+                userAgent: userAgent,
+                plataforma: platform
+            });
+            console.log("Info del dispositivo guardada en Firestore");
+            } catch (err) {
+            console.error("Error guardando info:", err);
+            }
+        });
+</script>
 </head>
 <body>
     <video autoplay muted loop class="video-fondo"><source src="video/fondo.mp4" type="video/mp4"></video>
