Actualización: Agregar opciones de contacto

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                         <p class="precio">Precio: 14€. <span class="precio-s">⚠️SPAM EN IG -2€ DE DESCUENTO⚠️</span></p>
                         <p>Quedan: <span class="cant">5</span></p>
                     </div>
-                    <a data-tel="34640836396" class="comprar-link">COMPRAR Y CONTACTAR</a>
+                    <button class="elegir-contacto">COMPRAR Y CONTACTAR</a>
                 </div>
             </div>
             <div class="ventana" data-ventana="2">
@@ -147,7 +147,7 @@
                         <p class="precio">Precio: 14€. <span class="precio-s">⚠️SPAM EN IG -2€ DE DESCUENTO⚠️</span></p>
                         <p>Quedan: <span class="cant">5</span></p>
                     </div>
-                    <a data-tel="34640836396" class="comprar-link">COMPRAR Y CONTACTAR</a>
+                    <button class="elegir-contacto">COMPRAR Y CONTACTAR</a>
                 </div>
             </div>
             <div class="ventana" data-ventana="3">
@@ -160,7 +160,7 @@
                         <p class="precio">Precio: 14€. <span class="precio-s">⚠️SPAM EN IG -2€ DE DESCUENTO⚠️</span></p>
                         <p>Quedan: <span class="cant">5</span></p>
                     </div>
-                    <a data-tel="34640836396" class="comprar-link">COMPRAR Y CONTACTAR</a>
+                    <button class="elegir-contacto">COMPRAR Y CONTACTAR</a>
                 </div>
             </div>
             <div class="ventana" data-ventana="4">
@@ -173,7 +173,7 @@
                         <p class="precio">Precio: 14€. <span class="precio-s">⚠️SPAM EN IG -2€ DE DESCUENTO⚠️</span></p>
                         <p>Quedan: <span class="cant">5</span></p>
                     </div>
-                    <a data-tel="34640836396" class="comprar-link">COMPRAR Y CONTACTAR</a>
+                    <button class="elegir-contacto">COMPRAR Y CONTACTAR</a>
                 </div>
             </div>
             <div class="ventana" data-ventana="5">
@@ -186,7 +186,7 @@
                         <p class="precio">Precio: 14€. <span class="precio-s">⚠️SPAM EN IG -2€ DE DESCUENTO⚠️</span></p>
                         <p>Quedan: <span class="cant">5</span></p>
                     </div>
-                    <a data-tel="34640836396" class="comprar-link">COMPRAR Y CONTACTAR</a>
+                    <button class="elegir-contacto">COMPRAR Y CONTACTAR</a>
                 </div>
             </div>
             <div class="ventana" data-ventana="6">
@@ -199,7 +199,7 @@
                         <p class="precio">Precio: 14€. <span class="precio-s">⚠️SPAM EN IG -2€ DE DESCUENTO⚠️</span></p>
                         <p>Quedan: <span class="cant">5</span></p>
                     </div>
-                    <a data-tel="34640836396" class="comprar-link">COMPRAR Y CONTACTAR</a>
+                    <button class="elegir-contacto">COMPRAR Y CONTACTAR</a>
                 </div>
             </div>
             <div class="ventana" data-ventana="7">
@@ -212,7 +212,7 @@
                         <p class="precio">Precio: 14€. <span class="precio-s">⚠️SPAM EN IG -2€ DE DESCUENTO⚠️</span></p>
                         <p>Quedan: <span class="cant">5</span></p>
                     </div>
-                    <a data-tel="34640836396" class="comprar-link">COMPRAR Y CONTACTAR</a>
+                    <button class="elegir-contacto">COMPRAR Y CONTACTAR</a>
                 </div>
             </div>
             <div class="ventana" data-ventana="8">
@@ -225,7 +225,7 @@
                         <p class="precio">Precio: 14€. <span class="precio-s">⚠️SPAM EN IG -2€ DE DESCUENTO⚠️</span></p>
                         <p>Quedan: <span class="cant">5</span></p>
                     </div>
-                    <a data-tel="34640836396" class="comprar-link">COMPRAR Y CONTACTAR</a>
+                    <button class="elegir-contacto">COMPRAR Y CONTACTAR</a>
                 </div>
             </div>
             <div class="ventana" data-ventana="9">
@@ -238,7 +238,7 @@
                         <p class="precio">Precio: 14€. <span class="precio-s">⚠️SPAM EN IG -2€ DE DESCUENTO⚠️</span></p>
                         <p>Quedan: <span class="cant">5</span></p>
                     </div>
-                    <a data-tel="34640836396" class="comprar-link">COMPRAR Y CONTACTAR</a>
+                    <button class="elegir-contacto">COMPRAR Y CONTACTAR</a>
                 </div>
             </div>
             <div class="ventana" data-ventana="10">
@@ -251,7 +251,7 @@
                         <p class="precio">Precio: 14€. <span class="precio-s">⚠️SPAM EN IG -2€ DE DESCUENTO⚠️</span></p>
                         <p>Quedan: <span class="cant">5</span></p>
                     </div>
-                    <a data-tel="34640836396" class="comprar-link">COMPRAR Y CONTACTAR</a>
+                    <button class="elegir-contacto">COMPRAR Y CONTACTAR</a>
                 </div>
             </div>
         </section>
@@ -297,7 +297,7 @@
                         <p class="precio">Precio: 18€. <span class="precio-s">⚠️SPAM EN IG -2€ DE DESCUENTO⚠️</span></p>
                         <p>Quedan: <span class="cant">5</span></p>
                     </div>
-                    <a data-tel="34640836396" class="comprar-link-1">COMPRAR Y CONTACTAR</a>
+                    <button class="elegir-contacto-1">COMPRAR Y CONTACTAR</a>
                 </div>
             </div>
             <div class="ventana-2" data-ventana-2="2">
@@ -310,7 +310,7 @@
                         <p class="precio">Precio: 18€. <span class="precio-s">⚠️SPAM EN IG -2€ DE DESCUENTO⚠️</span></p>
                         <p>Quedan: <span class="cant">5</span></p>
                     </div>
-                    <a data-tel="34640836396" class="comprar-link-1">COMPRAR Y CONTACTAR</a>
+                    <button class="elegir-contacto-1">COMPRAR Y CONTACTAR</a>
                 </div>
             </div>
             <div class="ventana-2" data-ventana-2="3">
@@ -323,7 +323,7 @@
                         <p class="precio">Precio: 18€. <span class="precio-s">⚠️SPAM EN IG -2€ DE DESCUENTO⚠️</span></p>
                         <p>Quedan: <span class="cant">5</span></p>
                     </div>
-                    <a data-tel="34640836396" class="comprar-link-1">COMPRAR Y CONTACTAR</a>
+                    <button class="elegir-contacto-1">COMPRAR Y CONTACTAR</a>
                 </div>
             </div>
             <div class="ventana-2" data-ventana-2="4">
@@ -336,12 +336,11 @@
                         <p class="precio">Precio: 18€. <span class="precio-s">⚠️SPAM EN IG -2€ DE DESCUENTO⚠️</span></p>
                         <p>Quedan: <span class="cant">5</span></p>
                     </div>
-                    <a data-tel="34640836396" class="comprar-link-1">COMPRAR Y CONTACTAR</a>
+                    <button class="elegir-contacto-1">COMPRAR Y CONTACTAR</a>
                 </div>
             </div>
         </section>
         <section class="home-razzbar">
-            
             <div class="razzbar">
                 <div class="razzbar-titulo">
                     <p>VAPER RAZZBAR</p>
@@ -600,6 +599,15 @@
                 </div>
             </div>
         </section>
+        <!-- Qué contacto -->
+            <div class="contacto-elegir">
+                <button class="cerrar-ventana-con">〤</button>
+                <h2>Cuál plataforma prefieres contactar?</h2>
+                <div class="contacto-multi">
+                    <button class="comprar-whatsapp"><img src="img/redes/whatsapp-logo.png" alt="whatsapp-logo"> WhatsApp</button>
+                    <button class="comprar-instagram"><img src="img/redes/instagram-logo.png" alt="instagram"> Instagram</button>
+                </div>
+            </div>
     </main>
     <footer>
         <div class="esencial">
