--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                         <p class="precio">Precio: 14€. <span class="precio-s">⚠️SPAM EN IG -2€ DE DESCUENTO⚠️</span></p>
                         <p>Quedan: <span class="cant">5</span></p>
                     </div>
-                    <button class="elegir-contacto">COMPRAR Y CONTACTAR</a>
+                    <button class="elegir-contacto">COMPRAR Y CONTACTAR</button>
                 </div>
             </div>
             <div class="ventana" data-ventana="2">
@@ -147,7 +147,7 @@
                         <p class="precio">Precio: 14€. <span class="precio-s">⚠️SPAM EN IG -2€ DE DESCUENTO⚠️</span></p>
                         <p>Quedan: <span class="cant">5</span></p>
                     </div>
-                    <button class="elegir-contacto">COMPRAR Y CONTACTAR</a>
+                    <button class="elegir-contacto">COMPRAR Y CONTACTAR</button>
                 </div>
             </div>
             <div class="ventana" data-ventana="3">
@@ -160,7 +160,7 @@
                         <p class="precio">Precio: 14€. <span class="precio-s">⚠️SPAM EN IG -2€ DE DESCUENTO⚠️</span></p>
                         <p>Quedan: <span class="cant">5</span></p>
                     </div>
-                    <button class="elegir-contacto">COMPRAR Y CONTACTAR</a>
+                    <button class="elegir-contacto">COMPRAR Y CONTACTAR</button>
                 </div>
             </div>
             <div class="ventana" data-ventana="4">
@@ -173,7 +173,7 @@
                         <p class="precio">Precio: 14€. <span class="precio-s">⚠️SPAM EN IG -2€ DE DESCUENTO⚠️</span></p>
                         <p>Quedan: <span class="cant">5</span></p>
                     </div>
-                    <button class="elegir-contacto">COMPRAR Y CONTACTAR</a>
+                    <button class="elegir-contacto">COMPRAR Y CONTACTAR</button>
                 </div>
             </div>
             <div class="ventana" data-ventana="5">
@@ -186,7 +186,7 @@
                         <p class="precio">Precio: 14€. <span class="precio-s">⚠️SPAM EN IG -2€ DE DESCUENTO⚠️</span></p>
                         <p>Quedan: <span class="cant">5</span></p>
                     </div>
-                    <button class="elegir-contacto">COMPRAR Y CONTACTAR</a>
+                    <button class="elegir-contacto">COMPRAR Y CONTACTAR</button>
                 </div>
             </div>
             <div class="ventana" data-ventana="6">
@@ -199,7 +199,7 @@
                         <p class="precio">Precio: 14€. <span class="precio-s">⚠️SPAM EN IG -2€ DE DESCUENTO⚠️</span></p>
                         <p>Quedan: <span class="cant">5</span></p>
                     </div>
-                    <button class="elegir-contacto">COMPRAR Y CONTACTAR</a>
+                    <button class="elegir-contacto">COMPRAR Y CONTACTAR</button>
                 </div>
             </div>
             <div class="ventana" data-ventana="7">
@@ -212,7 +212,7 @@
                         <p class="precio">Precio: 14€. <span class="precio-s">⚠️SPAM EN IG -2€ DE DESCUENTO⚠️</span></p>
                         <p>Quedan: <span class="cant">5</span></p>
                     </div>
-                    <button class="elegir-contacto">COMPRAR Y CONTACTAR</a>
+                    <button class="elegir-contacto">COMPRAR Y CONTACTAR</button>
                 </div>
             </div>
             <div class="ventana" data-ventana="8">
@@ -225,7 +225,7 @@
                         <p class="precio">Precio: 14€. <span class="precio-s">⚠️SPAM EN IG -2€ DE DESCUENTO⚠️</span></p>
                         <p>Quedan: <span class="cant">5</span></p>
                     </div>
-                    <button class="elegir-contacto">COMPRAR Y CONTACTAR</a>
+                    <button class="elegir-contacto">COMPRAR Y CONTACTAR</button>
                 </div>
             </div>
             <div class="ventana" data-ventana="9">
@@ -238,7 +238,7 @@
                         <p class="precio">Precio: 14€. <span class="precio-s">⚠️SPAM EN IG -2€ DE DESCUENTO⚠️</span></p>
                         <p>Quedan: <span class="cant">5</span></p>
                     </div>
-                    <button class="elegir-contacto">COMPRAR Y CONTACTAR</a>
+                    <button class="elegir-contacto">COMPRAR Y CONTACTAR</button>
                 </div>
             </div>
             <div class="ventana" data-ventana="10">
@@ -251,7 +251,7 @@
                         <p class="precio">Precio: 14€. <span class="precio-s">⚠️SPAM EN IG -2€ DE DESCUENTO⚠️</span></p>
                         <p>Quedan: <span class="cant">5</span></p>
                     </div>
-                    <button class="elegir-contacto">COMPRAR Y CONTACTAR</a>
+                    <button class="elegir-contacto">COMPRAR Y CONTACTAR</button>
                 </div>
             </div>
         </section>
@@ -297,7 +297,7 @@
                         <p class="precio">Precio: 18€. <span class="precio-s">⚠️SPAM EN IG -2€ DE DESCUENTO⚠️</span></p>
                         <p>Quedan: <span class="cant">5</span></p>
                     </div>
-                    <button class="elegir-contacto-1">COMPRAR Y CONTACTAR</a>
+                    <button class="elegir-contacto">COMPRAR Y CONTACTAR</button>
                 </div>
             </div>
             <div class="ventana-2" data-ventana-2="2">
@@ -310,7 +310,7 @@
                         <p class="precio">Precio: 18€. <span class="precio-s">⚠️SPAM EN IG -2€ DE DESCUENTO⚠️</span></p>
                         <p>Quedan: <span class="cant">5</span></p>
                     </div>
-                    <button class="elegir-contacto-1">COMPRAR Y CONTACTAR</a>
+                    <button class="elegir-contacto">COMPRAR Y CONTACTAR</button>
                 </div>
             </div>
             <div class="ventana-2" data-ventana-2="3">
@@ -323,7 +323,7 @@
                         <p class="precio">Precio: 18€. <span class="precio-s">⚠️SPAM EN IG -2€ DE DESCUENTO⚠️</span></p>
                         <p>Quedan: <span class="cant">5</span></p>
                     </div>
-                    <button class="elegir-contacto-1">COMPRAR Y CONTACTAR</a>
+                    <button class="elegir-contacto">COMPRAR Y CONTACTAR</button>
                 </div>
             </div>
             <div class="ventana-2" data-ventana-2="4">
@@ -336,7 +336,7 @@
                         <p class="precio">Precio: 18€. <span class="precio-s">⚠️SPAM EN IG -2€ DE DESCUENTO⚠️</span></p>
                         <p>Quedan: <span class="cant">5</span></p>
                     </div>
-                    <button class="elegir-contacto-1">COMPRAR Y CONTACTAR</a>
+                    <button class="elegir-contacto">COMPRAR Y CONTACTAR</button>
                 </div>
             </div>
         </section>
@@ -524,90 +524,145 @@
             <div class="waspe">
                 <div class="waspe-titulo">
                     <p>VAPER WASPE</p>
-                    <p class="promos">⚠️PROMO: HACES SPAM EN IG -5€ DE DESCUENTO⚠️</p>
+                    <p class="promos">⚠️PROMO: HACES SPAM EN IG -2€ DE DESCUENTO⚠️</p>
                     <p>100K PUFFS</p>
                 </div>
                 <hr>
             </div>
-            <div class="proximamente">
-                <h2>PRÓXIMAMENTE</h2>
-                <h2>PRÓXIMAMENTE</h2>
-                <h2>PRÓXIMAMENTE</h2>
-                <h2>PRÓXIMAMENTE</h2>
-                <h2>PRÓXIMAMENTE</h2>
-            </div>
             <div class="productos-waspe">
-                <div class="product-waspe">
-                    <img src="img/waspe/waspe1.png" alt=" ">
-                    <p>Razzbar Blackberry Ice</p>
+                <button class="product-waspe" data-ventana-3="1">
+                    <img src="img/waspe/waspe10.png" alt="Vaper redondo amarillo degradado rosa">
+                    <span>Waspe Strawberry Watermelon / MR.Blue / Grape Ice / Rainboy Candy</span>
                     <span>22€</span>
+                </button>
+                <button class="product-waspe" data-ventana-3="2">
+                    <img src="img/waspe/waspe8.png" alt="Vaper redondo verde">
+                    <span>Waspe Watermelon Ice / Strawberry Kiwi / Raspberry Watermelon / Lemon Lime</span>
+                    <span>20€</span>
+                </button><button class="product-waspe" data-ventana-3="3">
+                    <img src="img/waspe/waspe12.png" alt="Vaper redondo celestre degradado azul">
+                    <span>Waspe Blueberry Ice / Black Knight / Strawberry Ice / Strawberry Watermelon</span>
+                    <span>20€</span>
+                </button><button class="product-waspe" data-ventana-3="4">
+                    <img src="img/waspe/waspe7.png" alt="Vaper redondo rosa degradado azul">
+                    <span>Waspe Strawberry Raspberry Cherry / Crazy Cherry Ice / Cola Ice</span>
+                    <span>20€</span>
+                </button><button class="product-waspe" data-ventana-3="5">
+                    <img src="img/waspe/waspe9.png" alt="Vaper redondo blanco degradado celeste">
+                    <span>Waspe Juicy Peach Ice / Tropical Fruit / Fruit Blast / Peach Berry</span>
+                    <span>20€</span>
+                </button><button class="product-waspe" data-ventana-3="6">
+                    <img src="img/waspe/waspe13.png" alt="Vaper redondo naranja">
+                    <span>Waspe Redbull Ice / Banana Ice / Pineapple Coconut Ice / Triple Mango Ice</span>
+                    <span>20€</span>
+                </button><button class="product-waspe" data-ventana-3="7">
+                    <img src="img/waspe/waspe1.png" alt="Vaper redondo amarillo">
+                    <span>Waspe Strawberry Banana / Strawberry Red Bull / Strawberry Mango / Pink Lemonade</span>
+                    <span>20€</span>
+                </button>
+            </div>
+            <!-- Ventanas descriptivas 3 -->
+            <div class="ventana-3" data-ventana-3="1">
+                <button class="cerrar-ventana">〤</button>
+                <div class="ventana-fondo-3">
+                    <img src="img/waspe/waspe10.png" alt="waspe">
+                    <div class="descripcion-waspe">
+                        <h2>Waspe Strawberry Watermelon / MR.Blue / Grape Ice / Rainboy Candy</h2>
+                        <p>Vaper cuádruple sabor fresa y sandía / mr.blue / uva / caramelo de colores de 100.000 caladas. ⚠️Evita el contacto de cualquier liquido y cualquiera caida, se puede dañar⚠️</p>
+                        <p class="precio">Precio: o-s">⚠️SPAM EN IG -2€ DE DESCUENTO⚠️</span></p>
+                        <p>Quedan: <span class="cant">5</span></p>
+                    </div>
+                    <button class="elegir-contacto">COMPRAR Y CONTACTAR</button>
                 </div>
-                <div class="product-waspe">
-                    <img src="img/waspe/waspe2.png" alt=" ">
-                    <p>Razzbar Blackberry Ice</p>
-                    <span>22€</span>
+            </div>
+            <div class="ventana-3" data-ventana-3="2">
+                <button class="cerrar-ventana">〤</button>
+                <div class="ventana-fondo-3">
+                    <img src="img/waspe/waspe8.png" alt="waspe">
+                    <div class="descripcion-waspe">
+                        <h2>Waspe Watermelon Ice / Strawberry Kiwi / Raspberry Watermelon / Lemon Lime</h2>
+                        <p>Vaper cuádruple sabor sandía / fresa y kiwwi / frambuesa y sandía / lima limón de 100.000 caladas. ⚠️Evita el contacto de cualquier liquido y cualquiera caida, se puede dañar⚠️</p>
+                        <p class="precio">Precio: 20€. <span class="precio-s">⚠️SPAM EN IG -2€ DE DESCUENTO⚠️</span></p>
+                        <p>Quedan: <span class="cant">5</span></p>
+                    </div>
+                    <button class="elegir-contacto">COMPRAR Y CONTACTAR</button>
                 </div>
-                <div class="product-waspe">
-                    <img src="img/waspe/waspe3.png" alt=" ">
-                    <p>Razzbar Blackberry Ice</p>
-                    <span>17€</span>
+            </div>
+            <div class="ventana-3" data-ventana-3="3">
+                <button class="cerrar-ventana">〤</button>
+                <div class="ventana-fondo-3">
+                    <img src="img/waspe/waspe12.png" alt="waspe">
+                    <div class="descripcion-waspe">
+                        <h2>Waspe Blueberry Ice / Black Knight / Strawberry Ice / Strawberry Watermelon</h2>
+                        <p>Vaper cuádruple sabor arándanos / caballero negro / fresa / fresa y sandía de 100.000 caladas. ⚠️Evita el contacto de cualquier liquido y cualquiera caida, se puede dañar⚠️</p>
+                        <p class="precio">Precio: 20€. <span class="precio-s">⚠️SPAM EN IG -2€ DE DESCUENTO⚠️</span></p>
+                        <p>Quedan: <span class="cant">5</span></p>
+                    </div>
+                    <button class="elegir-contacto">COMPRAR Y CONTACTAR</button>
                 </div>
-                <div class="product-waspe">
-                    <img src="img/waspe/waspe4.png" alt=" ">
-                    <p>Razzbar Blackberry Ice</p>
-                    <span>22€</span>
+            </div>
+            <div class="ventana-3" data-ventana-3="4">
+                <button class="cerrar-ventana">〤</button>
+                <div class="ventana-fondo-3">
+                    <img src="img/waspe/waspe7.png" alt="waspe">
+                    <div class="descripcion-waspe">
+                        <h2>Waspe Strawberry Raspberry Cherry / Crazy Cherry Ice / Cola Ice</h2>
+                        <p>Vaper cuádruple sabor fresa, frambuesa y cereza / cereza loca / coca cola de 100.000 caladas. ⚠️Evita el contacto de cualquier liquido y cualquiera caida, se puede dañar⚠️</p>
+                        <p class="precio">Precio: 20€. <span class="precio-s">⚠️SPAM EN IG -2€ DE DESCUENTO⚠️</span></p>
+                        <p>Quedan: <span class="cant">5</span></p>
+                    </div>
+                    <button class="elegir-contacto">COMPRAR Y CONTACTAR</button>
                 </div>
-                <div class="product-waspe">
-                    <img src="img/waspe/waspe5.png" alt=" ">
-                    <p>Razzbar Blackberry Ice</p>
-                    <span>22€</span>
+            </div>
+            <div class="ventana-3" data-ventana-3="5">
+                <button class="cerrar-ventana">〤</button>
+                <div class="ventana-fondo-3">
+                    <img src="img/waspe/waspe9.png" alt="waspe">
+                    <div class="descripcion-waspe">
+                        <h2>Waspe Juicy Peach Ice / Tropical Fruit / Fruit Blast / Peach Berry</h2>
+                        <p>Vaper cuádruple sabor melocotón jugoso / fruta tropical / explosión de frutas / melocotón y bayas de 100.000 caladas. ⚠️Evita el contacto de cualquier liquido y cualquiera caida, se puede dañar⚠️</p>
+                        <p class="precio">Precio: 20€. <span class="precio-s">⚠️SPAM EN IG -2€ DE DESCUENTO⚠️</span></p>
+                        <p>Quedan: <span class="cant">5</span></p>
+                    </div>
+                    <button class="elegir-contacto">COMPRAR Y CONTACTAR</button>
                 </div>
-                <div class="product-waspe">
-                    <img src="img/waspe/waspe6.png" alt=" ">
-                    <p>Razzbar Blackberry Ice</p>
-                    <span>22€</span>
+            </div>
+            <div class="ventana-3" data-ventana-3="6">
+                <button class="cerrar-ventana">〤</button>
+                <div class="ventana-fondo-3">
+                    <img src="img/waspe/waspe13.png" alt="waspe">
+                    <div class="descripcion-waspe">
+                        <h2>Waspe Redbull Ice / Banana Ice / Pineapple Coconut Ice / Triple Mango Ice</h2>
+                        <p>Vaper cuádruple sabor redbull / plátano / piña y coco / triple de mangode 100.000 caladas. ⚠️Evita el contacto de cualquier liquido y cualquiera caida, se puede dañar⚠️</p>
+                        <p class="precio">Precio: 20€. <span class="precio-s">⚠️SPAM EN IG -2€ DE DESCUENTO⚠️</span></p>
+                        <p>Quedan: <span class="cant">5</span></p>
+                    </div>
+                    <button class="elegir-contacto">COMPRAR Y CONTACTAR</button>
                 </div>
-                <div class="product-waspe">
-                    <img src="img/waspe/waspe7.png" alt=" ">
-                    <p>Razzbar Blackberry Ice</p>
-                    <span>22€</span>
-                </div>
-                <div class="product-waspe">
-                    <img src="img/waspe/waspe8.png" alt=" ">
-                    <p>Razzbar Blackberry Ice</p>
-                    <span>22€</span>
-                </div>
-                <div class="product-waspe">
-                    <img src="img/waspe/waspe9.png" alt=" ">
-                    <p>Razzbar Blackberry Ice</p>
-                    <span>22€</span>
-                </div>
-                <div class="product-waspe">
-                    <img src="img/waspe/waspe10.png" alt=" ">
-                    <p>Razzbar Blackberry Ice</p>
-                    <span>22€</span>
-                </div>
-                <div class="product-waspe">
-                    <img src="img/waspe/waspe11.png" alt=" ">
-                    <p>Razzbar Blackberry Ice</p>
-                    <span>22€</span>
-                </div>
-                <div class="product-waspe">
-                    <img src="img/waspe/waspe12.png" alt=" ">
-                    <p>Razzbar Blackberry Ice</p>
-                    <span>22€</span>
+            </div>
+            <div class="ventana-3" data-ventana-3="7">
+                <button class="cerrar-ventana">〤</button>
+                <div class="ventana-fondo-3">
+                    <img src="img/waspe/waspe1.png" alt="waspe">
+                    <div class="descripcion-waspe">
+                        <h2>Waspe Strawberry Banana / Strawberry Red Bull / Strawberry Mango / Pink Lemonade</h2>
+                        <p>Vaper cuádruple saborfresa y plátano / fresa y redbull / fresa y mango / limonada rosa de 100.000 caladas. ⚠️Evita el contacto de cualquier liquido y cualquiera caida, se puede dañar⚠️</p>
+                        <p class="precio">Precio: 20€. <span class="precio-s">⚠️SPAM EN IG -2€ DE DESCUENTO⚠️</span></p>
+                        <p>Quedan: <span class="cant">5</span></p>
+                    </div>
+                    <button class="elegir-contacto">COMPRAR Y CONTACTAR</button>
                 </div>
             </div>
         </section>
         <!-- Qué contacto -->
-            <div class="contacto-elegir">
-                <button class="cerrar-ventana-con">〤</button>
-                <h2>Cuál plataforma prefieres contactar?</h2>
-                <div class="contacto-multi">
-                    <button class="comprar-whatsapp"><img src="img/redes/whatsapp-logo.png" alt="whatsapp-logo"> WhatsApp</button>
-                    <button class="comprar-instagram"><img src="img/redes/instagram-logo.png" alt="instagram"> Instagram</button>
-                </div>
+        <div class="contacto-elegir">
+            <button class="cerrar-ventana-con">〤</button>
+            <h2>Cuál plataforma prefieres contactar?</h2>
+            <div class="contacto-multi">
+                <button class="comprar-whatsapp"><img src="img/redes/whatsapp-logo.png" alt="whatsapp-logo"> WhatsApp</button>
+                <button class="comprar-instagram"><img src="img/redes/instagram-logo.png" alt="instagram"> Instagram</button>
             </div>
+        </div>
     </main>
     <footer>
         <div class="esencial">
