Actualizar precios Waspe

--- a/index.html
+++ b/index.html
@@ -533,29 +533,34 @@
                 <button class="product-waspe" data-ventana-3="1">
                     <img src="img/waspe/waspe10.png" alt="Vaper redondo amarillo degradado rosa">
                     <span>Waspe Strawberry Watermelon / MR.Blue / Grape Ice / Rainboy Candy</span>
-                    <span>22€</span>
+                    <span>20€</span>
                 </button>
                 <button class="product-waspe" data-ventana-3="2">
                     <img src="img/waspe/waspe8.png" alt="Vaper redondo verde">
                     <span>Waspe Watermelon Ice / Strawberry Kiwi / Raspberry Watermelon / Lemon Lime</span>
                     <span>20€</span>
-                </button><button class="product-waspe" data-ventana-3="3">
+                </button>
+                <button class="product-waspe" data-ventana-3="3">
                     <img src="img/waspe/waspe12.png" alt="Vaper redondo celestre degradado azul">
                     <span>Waspe Blueberry Ice / Black Knight / Strawberry Ice / Strawberry Watermelon</span>
                     <span>20€</span>
-                </button><button class="product-waspe" data-ventana-3="4">
+                </button>
+                <button class="product-waspe" data-ventana-3="4">
                     <img src="img/waspe/waspe7.png" alt="Vaper redondo rosa degradado azul">
                     <span>Waspe Strawberry Raspberry Cherry / Crazy Cherry Ice / Cola Ice</span>
                     <span>20€</span>
-                </button><button class="product-waspe" data-ventana-3="5">
+                </button>
+                <button class="product-waspe" data-ventana-3="5">
                     <img src="img/waspe/waspe9.png" alt="Vaper redondo blanco degradado celeste">
                     <span>Waspe Juicy Peach Ice / Tropical Fruit / Fruit Blast / Peach Berry</span>
                     <span>20€</span>
-                </button><button class="product-waspe" data-ventana-3="6">
+                </button>
+                <button class="product-waspe" data-ventana-3="6">
                     <img src="img/waspe/waspe13.png" alt="Vaper redondo naranja">
                     <span>Waspe Redbull Ice / Banana Ice / Pineapple Coconut Ice / Triple Mango Ice</span>
                     <span>20€</span>
-                </button><button class="product-waspe" data-ventana-3="7">
+                </button>
+                <button class="product-waspe" data-ventana-3="7">
                     <img src="img/waspe/waspe1.png" alt="Vaper redondo amarillo">
                     <span>Waspe Strawberry Banana / Strawberry Red Bull / Strawberry Mango / Pink Lemonade</span>
                     <span>20€</span>
@@ -569,7 +574,7 @@
                     <div class="descripcion-waspe">
                         <h2>Waspe Strawberry Watermelon / MR.Blue / Grape Ice / Rainboy Candy</h2>
                         <p>Vaper cuádruple sabor fresa y sandía / mr.blue / uva / caramelo de colores de 100.000 caladas. ⚠️Evita el contacto de cualquier liquido y cualquiera caida, se puede dañar⚠️</p>
-                        <p class="precio">Precio: o-s">⚠️SPAM EN IG -2€ DE DESCUENTO⚠️</span></p>
+                        <p class="precio">Precio: 20€">⚠️SPAM EN IG -2€ DE DESCUENTO⚠️</span></p>
                         <p>Quedan: <span class="cant">5</span></p>
                     </div>
                     <button class="elegir-contacto">COMPRAR Y CONTACTAR</button>
