Actualización: Agotado algunos productos Bang

--- a/index.html
+++ b/index.html
@@ -77,51 +77,61 @@
                     <span>Bang Waternelon Ice & Strawberry Mango</span>
                     <span>14€</span>
                 </button>
-                <button class="product-bang" data-ventana="2">
+                <div class="agotado-bang">
+                    <button class="product-bang" data-ventana="2">
                     <img src="img/bang/bang2.jpg" alt="bang watermelon / ice bluberry mint">
                     <span>Bang Watermelon Ice & Blueberry Mint</span>
                     <span>14€</span>
                 </button>
+                </div>
                 <button class="product-bang" data-ventana="3">
                     <img src="img/bang/bang3.jpg" alt="bang redbull / watermelon bubble candy">
                     <span>Bang Redbull & Watermelon Bubble Candy</span>
                     <span>14€</span>
                 </button>
-                <button class="product-bang" data-ventana="4">
+                <div class="agotado-bang">
+                    <button class="product-bang" data-ventana="4">
                     <img src="img/bang/bang4.jpg" alt="bang strawberry watermelon & kiwi passion fruit guava">
                     <span>Bang Strawberry Watermelon & Kiwi Passion Fruit Guava</span>
                     <span>14€</span>
                 </button>
+                </div>
                 <button class="product-bang" data-ventana="5">
                     <img src="img/bang/bang5.png" alt="bang blueberry ice / black dragon ice">
                     <span>Bang Blueberry Ice & Black Dragon Ice</span>
                     <span>14€</span>
                 </button>
-                <button class="product-bang" data-ventana="6">
+                <div class="agotado-bang">
+                    <button class="product-bang" data-ventana="6">
                     <img src="img/bang/bang6.jpg" alt="bang redbull / bluberry watermelon">
                     <span>Bang Redbull & Blueberry Watermelon</span>
                     <span>14€</span>
                 </button>
+                </div>
                 <button class="product-bang" data-ventana="7">
                     <img src="img/bang/bang7.jpg" alt="bang blueberryice / strawberry banana">
                     <span>Bang Blueberry Ice & Strawberry Banana</span>
                     <span>14€</span>
                 </button>
-                <button class="product-bang" data-ventana="8">
+                <div class="agotado-bang">
+                    <button class="product-bang" data-ventana="8">
                     <img src="img/bang/bang8.png" alt="bang blueberryice / strawberry banana">
                     <span>Bang Strawberry Kiwi & Sour Apple Raspberry</span>
                     <span>14€</span>
                 </button>
+                </div>
                 <button class="product-bang" data-ventana="9">
                     <img src="img/bang/bang9.png" alt="bang blueberryice / strawberry banana">
                     <span>Bang Strawberry Kiwi & Peach Ice</span>
                     <span>14€</span>
                 </button>
-                <button class="product-bang" data-ventana="10">
+                <div class="agotado-bang">
+                    <button class="product-bang" data-ventana="10">
                     <img src="img/bang/bang10.jpg" alt="bang blueberryice / strawberry banana">
                     <span>Bang Blueberry Ice & Black Dragon Ice</span>
                     <span>14€</span>
                 </button>
+                </div>
             </div>
             <!-- Ventanas descriptivas -->
             <div class="ventana" data-ventana="1">
